--- a/Mirirm_project_0412_2/app/src/main/res/values/strings.xml
+++ b/Mirirm_project_0412_2/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="edit_hint">숫자 입력</string>
     <string name="btn_plus">더하기</string>
     <string name="btn_minus">빼기</string>
-    <string name="btn_nulti">곱하기</string>
+    <string name="btn_Multi">곱하기</string>
     <string name="btn_divide">나누기</string>
     <string name="text_result">계산 결과 : </string>
 </resources>
