직접 풀어보기 4-3 나머지 값 버튼 추가

--- a/Mirirm_project_0412_2/app/src/main/res/values/strings.xml
+++ b/Mirirm_project_0412_2/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="btn_minus">빼기</string>
     <string name="btn_Multi">곱하기</string>
     <string name="btn_divide">나누기</string>
+    <string name="btn_mod">나머지값</string>
     <string name="text_result">계산 결과 : </string>
 </resources>
