--- a/Mirim_Project_0414_1/app/src/main/res/values/strings.xml
+++ b/Mirim_Project_0414_1/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">애완동물 사진보기</string>
-    <Strign name="text_start">선탯을 시작하시겠습니까?</Strign>
-    <String name="text_quest">좋아하는 애완동물은?</String>
+    <string name="text_start">선택을 시작하시겠습니까?</string>
+    <string name="text_quest">좋아하는 애완동물은?</string>
+    <string name="check_start">시작함</string>
     <string name="radio_dog">강아지</string>
     <string name="radio_cat">고양이</string>
     <string name="radio_rabbit">토끼</string>
